# fiberscent-site

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
fiberscentSite/: __init__.py  routes.py
fiberscentSite/static/: style.css
fiberscentSite/static/JS/: mobile-navbar.js
fiberscentSite/templates/: base.html  index.html  nav-bar.html
