[tool.poetry]
name = "fiberscent-site"
version = "0.1.0"
description = ""
authors = ["Fel1pe14 <fel1pe14@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9.2"
gunicorn = "^20.1.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
